Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.12
-
None
Description
missing extra copy of xtrabackup_info file when run mariabackup with option --extra-lsndir
expected : depend on the MariaDB-Backup user guide
when perform mariabackup with option --extra-lsndir
additional copies of the xtrabackup_checkpoints and xtrabackup_info files
have to be done in the extra dir
1. Perform mariabackup with option --extra-lsndir
2. After backup operation is being completed check in the extra-lsndir –
there is only extra copy of xtrabackup_checkpoints file ,
the extra copy of xtrabackup_info file is missing
|
1 |
[root@t4w3 mysql]# mariabackup -u root --backup --extra-lsndir=extr1 --target-dir /var/mariadb/backupex1
|
180125 16:32:10 Connecting to MySQL server host: localhost, user: root, password: not set, port: not set, socket: not set
|
Using server version 10.2.12-MariaDB
|
mariabackup based on MariaDB server 10.2.12-MariaDB Linux (x86_64)
|
mariabackup: uses posix_fadvise().
|
mariabackup: cd to /var/lib/mysql/
|
mariabackup: open files limit requested 0, set to 1024
|
mariabackup: using the following InnoDB configuration:
|
mariabackup: innodb_data_home_dir = .
|
mariabackup: innodb_data_file_path = ibdata1:12M:autoextend
|
mariabackup: innodb_log_group_home_dir = ./
|
2018-01-25 16:32:10 139687046744192 [Note] InnoDB: Number of pools: 1
|
180125 16:32:10 >> log scanned up to (1041390632)
|
mariabackup: Generating a list of tablespaces
|
2018-01-25 16:32:10 139687046744192 [Warning] InnoDB: Allocated tablespace ID 3 for mysql/gtid_slave_pos, old maximum was 0
|
180125 16:32:10 [01] Copying ./ibdata1 to /var/mariadb/backupex1/ibdata1
|
180125 16:32:11 >> log scanned up to (1041390632)
|
180125 16:32:12 [01] ...done
|
180125 16:32:12 [01] Copying ./mysql/gtid_slave_pos.ibd to /var/mariadb/backupex1/mysql/gtid_slave_pos.ibd
|
180125 16:32:12 [01] ...done
|
180125 16:32:12 [01] Copying ./mysql/innodb_index_stats.ibd to /var/mariadb/backupex1/mysql/innodb_index_stats.ibd
|
180125 16:32:12 [01] ...done
|
180125 16:32:12 [01] Copying ./mysql/innodb_table_stats.ibd to /var/mariadb/backupex1/mysql/innodb_table_stats.ibd
|
180125 16:32:12 [01] ...done
|
180125 16:32:12 [01] Copying ./boxoffice_mdb/dim_showtime.ibd to /var/mariadb/backupex1/boxoffice_mdb/dim_showtime.ibd
|
180125 16:32:14 [01] ...done
|
180125 16:32:15 [01] Copying ./boxoffice_mdb/dim_theater_mdc.ibd to /var/mariadb/backupex1/boxoffice_mdb/dim_theater_mdc.ibd
|
180125 16:32:15 [01] ...done
|
180125 16:32:15 [01] Copying ./boxoffice_mdb/dim_theater.ibd to /var/mariadb/backupex1/boxoffice_mdb/dim_theater.ibd
|
180125 16:32:15 [01] ...done
|
180125 16:32:15 [01] Copying ./boxoffice_mdb/dim_ticket_type.ibd to /var/mariadb/backupex1/boxoffice_mdb/dim_ticket_type.ibd
|
180125 16:32:15 [01] ...done
|
180125 16:32:15 [01] Copying ./boxoffice_mdb/dim_title.ibd to /var/mariadb/backupex1/boxoffice_mdb/dim_title.ibd
|
180125 16:32:15 [01] ...done
|
180125 16:32:15 [01] Copying ./boxoffice_mdb/fact_tickets.ibd to /var/mariadb/backupex1/boxoffice_mdb/fact_tickets.ibd
|
180125 16:32:21 [01] ...done
|
180125 16:32:22 Executing FLUSH NO_WRITE_TO_BINLOG TABLES...
|
180125 16:32:22 Executing FLUSH TABLES WITH READ LOCK...
|
180125 16:32:22 Starting to backup non-InnoDB tables and files
|
180125 16:32:22 [01] Copying ./mysql/roles_mapping.MYI to /var/mariadb/backupex1/mysql/roles_mapping.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/column_stats.MYD to /var/mariadb/backupex1/mysql/column_stats.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/table_stats.MYI to /var/mariadb/backupex1/mysql/table_stats.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/column_stats.MYI to /var/mariadb/backupex1/mysql/column_stats.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/table_stats.frm to /var/mariadb/backupex1/mysql/table_stats.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/column_stats.frm to /var/mariadb/backupex1/mysql/column_stats.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/tables_priv.MYD to /var/mariadb/backupex1/mysql/tables_priv.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/columns_priv.MYD to /var/mariadb/backupex1/mysql/columns_priv.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/tables_priv.MYI to /var/mariadb/backupex1/mysql/tables_priv.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/columns_priv.MYI to /var/mariadb/backupex1/mysql/columns_priv.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/tables_priv.frm to /var/mariadb/backupex1/mysql/tables_priv.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/columns_priv.frm to /var/mariadb/backupex1/mysql/columns_priv.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/db.MYD to /var/mariadb/backupex1/mysql/db.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/db.MYI to /var/mariadb/backupex1/mysql/db.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/db.frm to /var/mariadb/backupex1/mysql/db.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/event.MYD to /var/mariadb/backupex1/mysql/event.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/event.MYI to /var/mariadb/backupex1/mysql/event.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/event.frm to /var/mariadb/backupex1/mysql/event.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/func.MYD to /var/mariadb/backupex1/mysql/func.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/func.MYI to /var/mariadb/backupex1/mysql/func.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/func.frm to /var/mariadb/backupex1/mysql/func.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/time_zone.MYD to /var/mariadb/backupex1/mysql/time_zone.MYD
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/general_log.CSM to /var/mariadb/backupex1/mysql/general_log.CSM
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/time_zone.MYI to /var/mariadb/backupex1/mysql/time_zone.MYI
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/general_log.CSV to /var/mariadb/backupex1/mysql/general_log.CSV
|
180125 16:32:22 [01] ...done
|
180125 16:32:22 [01] Copying ./mysql/time_zone.frm to /var/mariadb/backupex1/mysql/time_zone.frm
|
180125 16:32:22 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/general_log.frm to /var/mariadb/backupex1/mysql/general_log.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_leap_second.MYD to /var/mariadb/backupex1/mysql/time_zone_leap_second.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/gtid_slave_pos.frm to /var/mariadb/backupex1/mysql/gtid_slave_pos.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_leap_second.MYI to /var/mariadb/backupex1/mysql/time_zone_leap_second.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_leap_second.frm to /var/mariadb/backupex1/mysql/time_zone_leap_second.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_category.MYD to /var/mariadb/backupex1/mysql/help_category.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_name.MYD to /var/mariadb/backupex1/mysql/time_zone_name.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_category.MYI to /var/mariadb/backupex1/mysql/help_category.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_name.MYI to /var/mariadb/backupex1/mysql/time_zone_name.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_category.frm to /var/mariadb/backupex1/mysql/help_category.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_name.frm to /var/mariadb/backupex1/mysql/time_zone_name.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_keyword.MYD to /var/mariadb/backupex1/mysql/help_keyword.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_transition.MYD to /var/mariadb/backupex1/mysql/time_zone_transition.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_keyword.MYI to /var/mariadb/backupex1/mysql/help_keyword.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_transition.MYI to /var/mariadb/backupex1/mysql/time_zone_transition.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_keyword.frm to /var/mariadb/backupex1/mysql/help_keyword.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/time_zone_transition.frm to /var/mariadb/backupex1/mysql/time_zone_transition.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_relation.MYD to /var/mariadb/backupex1/mysql/help_relation.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/user.MYI to /var/mariadb/backupex1/mysql/user.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_relation.MYI to /var/mariadb/backupex1/mysql/help_relation.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/user.MYD to /var/mariadb/backupex1/mysql/user.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_relation.frm to /var/mariadb/backupex1/mysql/help_relation.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/user.frm to /var/mariadb/backupex1/mysql/user.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_topic.MYD to /var/mariadb/backupex1/mysql/help_topic.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_topic.MYI to /var/mariadb/backupex1/mysql/help_topic.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/help_topic.frm to /var/mariadb/backupex1/mysql/help_topic.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/host.MYD to /var/mariadb/backupex1/mysql/host.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/host.MYI to /var/mariadb/backupex1/mysql/host.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/host.frm to /var/mariadb/backupex1/mysql/host.frm
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/index_stats.MYD to /var/mariadb/backupex1/mysql/index_stats.MYD
|
180125 16:32:23 [01] ...done
|
180125 16:32:23 [01] Copying ./mysql/index_stats.MYI to /var/mariadb/backupex1/mysql/index_stats.MYI
|
180125 16:32:23 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/index_stats.frm to /var/mariadb/backupex1/mysql/index_stats.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/time_zone_transition_type.MYD to /var/mariadb/backupex1/mysql/time_zone_transition_type.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/innodb_index_stats.frm to /var/mariadb/backupex1/mysql/innodb_index_stats.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proxies_priv.MYI to /var/mariadb/backupex1/mysql/proxies_priv.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proxies_priv.frm to /var/mariadb/backupex1/mysql/proxies_priv.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/innodb_table_stats.frm to /var/mariadb/backupex1/mysql/innodb_table_stats.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/roles_mapping.MYD to /var/mariadb/backupex1/mysql/roles_mapping.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/plugin.MYD to /var/mariadb/backupex1/mysql/plugin.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/plugin.MYI to /var/mariadb/backupex1/mysql/plugin.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/plugin.frm to /var/mariadb/backupex1/mysql/plugin.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proc.MYD to /var/mariadb/backupex1/mysql/proc.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proc.MYI to /var/mariadb/backupex1/mysql/proc.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proc.frm to /var/mariadb/backupex1/mysql/proc.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/procs_priv.MYD to /var/mariadb/backupex1/mysql/procs_priv.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/procs_priv.MYI to /var/mariadb/backupex1/mysql/procs_priv.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/procs_priv.frm to /var/mariadb/backupex1/mysql/procs_priv.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/proxies_priv.MYD to /var/mariadb/backupex1/mysql/proxies_priv.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/roles_mapping.frm to /var/mariadb/backupex1/mysql/roles_mapping.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/servers.MYD to /var/mariadb/backupex1/mysql/servers.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/servers.MYI to /var/mariadb/backupex1/mysql/servers.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/servers.frm to /var/mariadb/backupex1/mysql/servers.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/slow_log.CSM to /var/mariadb/backupex1/mysql/slow_log.CSM
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/slow_log.CSV to /var/mariadb/backupex1/mysql/slow_log.CSV
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/slow_log.frm to /var/mariadb/backupex1/mysql/slow_log.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/table_stats.MYD to /var/mariadb/backupex1/mysql/table_stats.MYD
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/time_zone_transition_type.MYI to /var/mariadb/backupex1/mysql/time_zone_transition_type.MYI
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./mysql/time_zone_transition_type.frm to /var/mariadb/backupex1/mysql/time_zone_transition_type.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/db.opt to /var/mariadb/backupex1/boxoffice_mdb/db.opt
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/dim_showtime.frm to /var/mariadb/backupex1/boxoffice_mdb/dim_showtime.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/dim_theater_mdc.frm to /var/mariadb/backupex1/boxoffice_mdb/dim_theater_mdc.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/dim_theater.frm to /var/mariadb/backupex1/boxoffice_mdb/dim_theater.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/dim_ticket_type.frm to /var/mariadb/backupex1/boxoffice_mdb/dim_ticket_type.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/dim_title.frm to /var/mariadb/backupex1/boxoffice_mdb/dim_title.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:24 [01] Copying ./boxoffice_mdb/fact_tickets.frm to /var/mariadb/backupex1/boxoffice_mdb/fact_tickets.frm
|
180125 16:32:24 [01] ...done
|
180125 16:32:25 [01] Copying ./performance_schema/db.opt to /var/mariadb/backupex1/performance_schema/db.opt
|
180125 16:32:25 [01] ...done
|
180125 16:32:25 [01] Copying ./test/db.opt to /var/mariadb/backupex1/test/db.opt
|
180125 16:32:25 [01] ...done
|
180125 16:32:25 [00] Writing extr1/db.opt
|
180125 16:32:25 [00] ...done
|
180125 16:32:25 Finished backing up non-InnoDB tables and files
|
180125 16:32:25 [01] Copying aria_log.00000001 to /var/mariadb/backupex1/aria_log.00000001
|
180125 16:32:25 [01] ...done
|
180125 16:32:25 [01] Copying aria_log_control to /var/mariadb/backupex1/aria_log_control
|
180125 16:32:25 [01] ...done
|
180125 16:32:25 Executing FLUSH NO_WRITE_TO_BINLOG ENGINE LOGS...
|
mariabackup: The latest check point (for incremental): '1041390623'
|
mariabackup: Stopping log copying thread.
|
|
|
2018-01-25 16:32:25 139687046744192 [Note] InnoDB: Read redo log up to LSN=1041391104
|
180125 16:32:25 >> log scanned up to (1041390632)
|
180125 16:32:25 Executing UNLOCK TABLES
|
180125 16:32:25 All tables unlocked
|
180125 16:32:25 [00] Copying ib_buffer_pool to /var/mariadb/backupex1/ib_buffer_pool
|
180125 16:32:25 [00] ...done
|
180125 16:32:25 Backup created in directory '/var/mariadb/backupex1/'
|
180125 16:32:25 [00] Writing backup-my.cnf
|
180125 16:32:25 [00] ...done
|
180125 16:32:25 [00] Writing xtrabackup_info
|
180125 16:32:25 [00] ...done
|
mariabackup: Redo log (from LSN 1041390623 to 1041390632) was copied.
|
180125 16:32:25 completed OK!
|
|
2 |
[root@t4w3 mysql]# ls /var/mariadb/backupex1
|
aria_log.00000001 backup-my.cnf extr1 ibdata1 mysql test xtrabackup_info
|
aria_log_control boxoffice_mdb ib_buffer_pool ib_logfile0 performance_schema xtrabackup_checkpoints
|
|
|
[root@t4w3 mysql]# ls extr1
|
xtrabackup_checkpoints
|