MDEV-15071  backup does not store xtrabackup_info in the --extra-lsndir directory